[gd_scene load_steps=8 format=3 uid="uid://dlper04ti72cl"]

[ext_resource type="Script" uid="uid://d0chx0lsqiici" path="res://scenes/ui/screens/tournament/tournament_screen.gd" id="1_4h6ge"]
[ext_resource type="Texture2D" uid="uid://24ktedfu4yyw" path="res://assets/art/ui/teamselection/tournament-screen.png" id="2_vuqja"]
[ext_resource type="PackedScene" uid="uid://h3bxrlyoc6c1" path="res://scenes/ui/screens/tournament/bracket_flag.tscn" id="3_q2jbp"]
[ext_resource type="Texture2D" uid="uid://dkd3wgarr6gx2" path="res://assets/art/ui/flags/flag-vseparator.png" id="4_yvmac"]
[ext_resource type="Texture2D" uid="uid://v1wsc8ri62yq" path="res://assets/art/ui/flags/flag-hseparator.png" id="5_4h6ge"]
[ext_resource type="Texture2D" uid="uid://d0nk3pk85kxyn" path="res://assets/art/ui/teamselection/super-striker.png" id="6_4h6ge"]
[ext_resource type="Texture2D" uid="uid://bog1glcwh145h" path="res://assets/art/ui/teamselection/quarters-label.png" id="7_4riqo"]

[node name="Tournament" type="Node"]
script = ExtResource("1_4h6ge")
background_music = 3

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vuqja")
stretch_mode = 6

[node name="BracketsContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="QFLeftContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/QFLeftContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="VSeperator" type="TextureRect" parent="Background/BracketsContainer/QFLeftContainer"]
layout_mode = 2
texture = ExtResource("4_yvmac")

[node name="BracketFlag2" parent="Background/BracketsContainer/QFLeftContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="Control" type="Control" parent="Background/BracketsContainer/QFLeftContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BracketFlag4" parent="Background/BracketsContainer/QFLeftContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="VSeperator2" type="TextureRect" parent="Background/BracketsContainer/QFLeftContainer"]
layout_mode = 2
texture = ExtResource("4_yvmac")

[node name="BracketFlag3" parent="Background/BracketsContainer/QFLeftContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="Control" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="SFLeftContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag2" parent="Background/BracketsContainer/SFLeftContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="VSeperator3" type="TextureRect" parent="Background/BracketsContainer/SFLeftContainer"]
layout_mode = 2
texture = ExtResource("4_yvmac")

[node name="BracketFlag4" parent="Background/BracketsContainer/SFLeftContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="LeftFinals" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag4" parent="Background/BracketsContainer/LeftFinals" instance=ExtResource("3_q2jbp")]
layout_mode = 2
stretch_mode = 5

[node name="FinalSeperator" type="VBoxContainer" parent="Background/BracketsContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HSeperator" type="TextureRect" parent="Background/BracketsContainer/FinalSeperator"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
texture = ExtResource("5_4h6ge")

[node name="RightFinals" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag4" parent="Background/BracketsContainer/RightFinals" instance=ExtResource("3_q2jbp")]
layout_mode = 2
stretch_mode = 5

[node name="Control2" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="SFRightContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag2" parent="Background/BracketsContainer/SFRightContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="VSeperator3" type="TextureRect" parent="Background/BracketsContainer/SFRightContainer"]
layout_mode = 2
texture = ExtResource("4_yvmac")

[node name="BracketFlag4" parent="Background/BracketsContainer/SFRightContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="Control3" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="QFRightContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/QFRightContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="VSeperator" type="TextureRect" parent="Background/BracketsContainer/QFRightContainer"]
layout_mode = 2
texture = ExtResource("4_yvmac")

[node name="BracketFlag2" parent="Background/BracketsContainer/QFRightContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="Control" type="Control" parent="Background/BracketsContainer/QFRightContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BracketFlag4" parent="Background/BracketsContainer/QFRightContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="VSeperator2" type="TextureRect" parent="Background/BracketsContainer/QFRightContainer"]
layout_mode = 2
texture = ExtResource("4_yvmac")

[node name="BracketFlag3" parent="Background/BracketsContainer/QFRightContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 2

[node name="Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -62.5
offset_top = -14.0
offset_right = 62.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/shadow_outline_size = 0
text = "CLICK ANYWHERE TO CONTINUE..."

[node name="StageTexture" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_top = 41.0
offset_right = 70.0
offset_bottom = 69.0
grow_horizontal = 2
texture = ExtResource("7_4riqo")
stretch_mode = 3

[node name="SuperStrikerTexture" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -108.0
offset_top = -188.0
offset_right = 1305.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_4h6ge")

[node name="WinnerContainer" type="Control" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="BracketFlag" parent="Background/WinnerContainer" instance=ExtResource("3_q2jbp")]
layout_mode = 1
offset_left = -44.0
offset_top = -70.0
offset_right = 0.0
offset_bottom = -42.0
scale = Vector2(2, 2)
